# cpython

./: .gitignore  CMakeLists.txt
Lib/importlib/: _bootstrap_external.py
Lib/test/test_importlib/: test_abc.py
Modules/: _localemodule.c  _pickle.c  _randommodule.c  _ssl.c  _winapi.c  atexitmodule.c  faulthandler.c  mmapmodule.c  overlapped.c  posixmodule.c  selectmodule.c  socketmodule.c  timemodule.c
Modules/_ctypes/: _ctypes.c  _ctypes_test.c  callbacks.c  callproc.c  ctypes.h
Modules/_io/: bufferedio.c  fileio.c  textio.c  winconsoleio.c
Modules/clinic/: _winapi.c.h
Objects/: methodobject.c
PC/: _msi.c  config.c  dl_nt.c  getpathp.c  msvcrtmodule.c  pyconfig.h  pyshellext.cpp  python3.def  uwp_compat.cpp  winreg.c
PCbuild/: python.natvis  pythoncore.vcxproj  pythoncore.vcxproj.filters
Python/: bootstrap_hash.c  dynload_win.c  fileutils.c  importlib_external.h  mysnprintf.c  pytime.c  sysmodule.c
Tools/msi/bundle/bootstrap/: pch.h
cmake/: pythonnt_rc.h.cmake
